# Depth_Focusing

./: Depth_Focusing_Pipeline.ipynb  Depth_Focusing_Pipeline.py  Depth_Focusing_Pipeline_blur_changed.py  Focusing.py  README.md  getContour_by_label.py  package-lock.json
Gradio/: gradio_interface.py
OtherDepth/: Depth_Focusing_Pipeline.py  requriments.txt  whole_env.yml
OtherDepth/models/: disparity-adjustment.py  disparity-estimation.py  disparity-refinement.py  pointcloud-inpainting.py
backend_django/: db.sqlite3  pyproject.toml
backend_django/config/: settings.py  urls.py
backend_django/medias/: models.py  segmentation.py  serializers.py  urls.py  views.py
backend_django/users/: models.py  urls.py  views.py
frontend_react/: package-lock.json  package.json
frontend_react/src/: api.ts  index.tsx  router.tsx
frontend_react/src/components/: ChooseLabel.tsx  GetBlurImage.tsx  Header.tsx  Root.tsx  ViewPhoto.tsx
frontend_react/src/routes/: GithubConfirm.tsx  Home.tsx  UploadPhotos.tsx
test_imgs/: classroom__rgb_00283_predicted_segmentation.pkl
